feat(SCRUM-1): apply java-spring-boot-dapr skill — Dapr state store, pub/sub, Mono<>, Virtual Threads, micrometer-tracing