@@ -1,33 +1,174 @@
-# SCRUM-1 — Technical Implementation Plan
-## Inferred Story: View & Delete Payees
-
-> **Jira access was blocked by authentication.**
-> Requirements inferred from codebase analysis of `backend/src/main/java/com/bank/payee/`.
+# SCRUM-1 — Technical Implementation Plan (v2 — Dapr-Native)
+## Skill Applied: `java-spring-boot-dapr` | Java 26 | Spring Boot 4.0.5 | Dapr 1.17.1
 
 ---
 
-## 1. Current State (Post-Analysis)
+## 1. Gap Analysis — Current vs Skill Standard
 
-The application already implements the full MFA-protected **Add Payee** flow:
+| Area | Current State | Required (Skill Standard) |
+|------|--------------|--------------------------|
+| Java version | 22 | **26** (`-XX:+UseCompactObjectHeaders`) |
+| Spring Boot | 3.3.0 | **4.0.5** (Jakarta EE 11 / Spring Framework 7) |
+| Dependency style | Monolithic `spring-boot-starter-web` | **Granular**: `spring-boot-starter-web-minimal` |
+| Dapr | ❌ Not used | **dapr-sdk-springboot 1.17.1** |
+| State store | `ConcurrentHashMap` (in-memory) | **Dapr State Store** with ETag concurrency |
+| Pub/Sub | ❌ None | **Dapr Pub/Sub** — `CloudEvent<PayeeAddedEvent>` on `payee-events` |
+| Threading | Default platform threads | **Virtual Threads** (`spring.threads.virtual.enabled: true`) |
+| Observability | ❌ None | **micrometer-tracing** (W3C trace propagation) |
+| Resiliency | ❌ None | **Dapr resiliency.yaml** (no hardcoded retries in Java) |
+| Secrets | N/A | `{{secretScope.secretKey}}` in component YAMLs |
+| Service return types | Blocking `Payee` / `boolean` | **`Mono<Payee>`** / **`Mono<Boolean>`** (Reactive) |
 
-| Layer | Status |
-|---|---|
-| Models (`Payee`, `MfaSession`, `MfaMethod`) | ✅ Complete |
-| DTOs (all 4 DTO classes) | ✅ Complete |
-| `MfaService` + `OtpService` + `VerifyResult` | ✅ Complete |
-| `PayeeService.addPayee()` + `getPayees()` | ✅ Complete |
-| `POST /api/payees/initiate-mfa` | ✅ Complete |
-| `POST /api/payees/verify-otp` | ✅ Complete |
-| `MfaServiceTest` | ✅ Complete (8 tests) |
-| `PayeeControllerTest` | ✅ Complete (5 tests) |
+---
 
-**Gaps identified — what SCRUM-1 still requires:**
+## 2. pom.xml Changes
 
-| Feature | Status |
-|---|---|
-| `GET /api/payees` endpoint | ⚠️ Service method exists; **controller endpoint MISSING** |
-| `DELETE /api/payees/{id}` endpoint | ❌ No service method AND no controller endpoint |
-| `PayeeServiceTest` | ❌ No unit tests for `PayeeService` at all |
+### Remove
+- `spring-boot-starter-web` → replace with `spring-boot-starter-web-minimal`
+- Parent version `3.3.0` → `4.0.5`
+- Java version `22` → `26`
+
+### Add
+```xml
+<dependency>
+  <groupId>io.dapr</groupId>
+  <artifactId>dapr-sdk-springboot</artifactId>
+  <version>1.17.1</version>
+</dependency>
+<dependency>
+  <groupId>io.micrometer</groupId>
+  <artifactId>micrometer-tracing</artifactId>
+</dependency>
+```
+
+---
+
+## 3. application.yml (full content — NEW FILE)
+```yaml
+spring:
+  application:
+    name: payee-mfa
+  threads:
+    virtual:
+      enabled: true
+dapr:
+  client:
+    grpc:
+      endpoint: "localhost:50001"
+```
+
+---
+
+## 4. Dapr Component YAMLs (NEW FILES under `components/`)
+
+### components/statestore.yaml
+```yaml
+apiVersion: dapr.io/v1alpha1
+kind: Component
+metadata:
+  name: payee-statestore
+spec:
+  type: state.redis
+  version: v1
+  metadata:
+    - name: redisHost
+      secretKeyRef: { name: redis-secret, key: redisHost }
+    - name: redisPassword
+      secretKeyRef: { name: redis-secret, key: redisPassword }
+auth:
+  secretStore: local-secret-store
+```
+
+### components/pubsub.yaml
+```yaml
+apiVersion: dapr.io/v1alpha1
+kind: Component
+metadata:
+  name: payee-pubsub
+spec:
+  type: pubsub.redis
+  version: v1
+  metadata:
+    - name: redisHost
+      secretKeyRef: { name: redis-secret, key: redisHost }
+auth:
+  secretStore: local-secret-store
+```
+
+### components/resiliency.yaml
+```yaml
+apiVersion: dapr.io/v1alpha1
+kind: Resiliency
+metadata:
+  name: payee-resiliency
+spec:
+  policies:
+    retries:
+      payee-retry:
+        policy: exponential
+        maxRetries: 3
+        maxInterval: 10s
+    timeouts:
+      payee-timeout: 5s
+  targets:
+    components:
+      payee-statestore:
+        outbound:
+          retry: payee-retry
+          timeout: payee-timeout
+```
+
+---
+
+## 5. Classes to Create / Modify
+
+### NEW: `model/PayeeAddedEvent.java`
+```java
+public record PayeeAddedEvent(
+    String payeeId, String name, String accountNumber,
+    String bankCode, String addedAt) {}
+```
+
+### MODIFY: `service/PayeeService.java` — replace ConcurrentHashMap with Dapr
+```java
+@Service
+public class PayeeService {
+    static final String STORE   = "payee-statestore";
+    static final String PUB_SUB = "payee-pubsub";
+    static final String TOPIC   = "payee-events";
+    private final DaprClient daprClient;
+
+    // addPayee → saveState + publishEvent → returns Mono<Payee>
+    public Mono<Payee> addPayee(Payee payee) { ... }
+
+    // getPayees → query statestore by key prefix → returns Mono<List<Payee>>
+    public Mono<List<Payee>> getPayees() { ... }
+
+    // deletePayee → getState → deleteState if exists → returns Mono<Boolean>
+    public Mono<Boolean> deletePayee(String id) { ... }
+}
+```
+
+### MODIFY: `controller/PayeeController.java` — reactive return types
+```java
+@GetMapping
+public Mono<ResponseEntity<List<Payee>>> getPayees() {
+    return payeeService.getPayees().map(ResponseEntity::ok);
+}
+
+@DeleteMapping("/{id}")
+public Mono<ResponseEntity<Void>> deletePayee(@PathVariable String id) {
+    return payeeService.deletePayee(id)
+        .map(removed -> removed
+            ? ResponseEntity.<Void>noContent().build()
+            : ResponseEntity.<Void>notFound().build());
+}
+```
+
+### KEEP unchanged
+- `config/SecurityConfig.java`
+- `service/MfaService.java`
+- All DTOs, models, `OtpService`, `VerifyResult`
 
 ---
 
